mongo-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongo
  name: mongo
spec:
  # type: LoadBalancer
  # type: NodePort
  ports:
    - port: 27017
      targetPort: 27017
  #     # nodePort: 30123 # port of the worker node
  selector:
    app: mongo
