api-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: fhirapi
spec:
  type: LoadBalancer
  selector:
    app: api
  ports:
    - port: 8080
      targetPort: 80
      protocol: TCP
      name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gate-way
  annotations:
    # nginx.ingress.kubernetes.io/use-regex: "true"
    certmanager.k8s.io/cluster-issuer: staging
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      # - path: /
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: fhirapi
      #       port:
      #         number: 8080
      - path: /api/fhir/(.*)
        pathType: Prefix
        backend:
          service:
            name: fhirapi
            port:
              number: 8080
